--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,50 @@ body {
   }
 }
 
+.section7 {
+  /* The image used */
+  background-color: #2AA99C;
+  fill-opacity: 0.2;
+
+  /* Full height */
+  width: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+@media screen and (max-width: 600px)  {
+  .section7 h1 {
+    font-size: 30px;
+  }
+}
+
+.section7 .text-section {
+  padding: 50px; 
+  text-align: center;
+}
+
+.section7 .text-section a {
+  font-size: 30px;
+  color: #fff;
+  line-height: 1.3;
+  margin-bottom: 30px;
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+  background: #000046;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #000046, #000046);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #000046, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.section7 .text-section a {
+  text-decoration: none;
+}
+
+
 .section1 {
   /* The image used */
   background-image: url("/images/top-image.png");
@@ -111,7 +155,7 @@ body {
 
 
 .section2 {
-  background-color: #25AAA1;
+  background-color: #2AA99C;
   width: 100%;
   min-height: 450px;
   position: relative;
